--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>stPatChecklist</title>
+    <title>stPatsSectional</title>
     <link href="https://fonts.googleapis.com/css2?display=swap" rel="stylesheet">
     <!-- <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Bungee+Shade&family=Matemasie&family=Oregano:ital@0;1&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet"> -->
     <link href="style.css" rel="stylesheet" type="text/css">
@@ -37,7 +37,7 @@
             <select id="fontSelect"></select>
 
             <label for="fontSize">Font Size (px):</label>
-            <input type="number" id="fontSize" value="16" min="12" max="48">
+            <input type="number" id="fontSize" value="16" min="8" max="100">
 
             <label for="textColor">Text Color:</label>
             <input type="color" id="textColor">
