Changed to flex and more

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1>✍🏼 March Checklist ✍🏼</h1>
+    <h1>✍🏼 theSectional ✍🏼</h1>
 
     <div id="mainContainer">
         <div id="headerContainer">
