Hiding and Showing stuff

--- a/index.html
+++ b/index.html
@@ -11,8 +11,16 @@
 <body>
     <h1>✍🏼 theSectional ✍🏼</h1>
 
+    <button onclick="toggleAllSections()" id="toggleAllBtn">👁 Show All Sections</button>
+
     <div id="mainContainer">
+
         <div id="headerContainer">
+
+
+            <!-- <button onclick="toggleHeaderControls()" id="headerToggleBtn">➕ Show Controls</button> -->
+
+            
             <div id="controls">
                 <div class="newFileSection">
                     <h2>✍🏼 Add A New Section ✍🏼</h2>
