added a second page for practice

--- a/index2.html
+++ b/index2.html
@@ -6,11 +6,11 @@
     <title>stPatsSectional</title>
     <link href="https://fonts.googleapis.com/css2?display=swap" rel="stylesheet">
     <!-- <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Bungee+Shade&family=Matemasie&family=Oregano:ital@0;1&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet"> -->
-    <link href="style.css" rel="stylesheet" type="text/css">
+    <link href="style2.css" rel="stylesheet" type="text/css">
 </head>
 <body>
     <h1>✍🏼 theSectional ✍🏼</h1>
-    <a href="index2.html" id="linkBack">Go To Slick!</a>
+    <a href="index.html" id="linkBack">Go To Original!</a>
     <button onclick="toggleAllSections()" id="toggleAllBtn">👁 Show All Sections</button>
 
     <div id="mainContainer">
@@ -35,36 +35,41 @@
                 </div>
             </div>
         </div>
+            <!-- Style Modal -->
+<!-- Example Modal Structure -->
+<div id="modalOverlay" style="display:none;"></div>
+<div id="styleModal" style="display:none;">
+
+
+    <label>Section BG Color:</label>
+    <input type="color" id="sectionColor"><br>
+
+    <label>Section Text Color:</label>
+    <input type="color" id="sectionTextColor"><br>
+
+    <label>Completed Text Color:</label>
+    <input type="color" id="completedTextColor"><br>
+
+    <label>Completed BG Color:</label>
+    <input type="color" id="completedBgColor"><br>
+
+    <label>Completed Font Style:</label>
+    <select id="completedFontStyle">
+        <option value="none">Normal</option>
+        <option value="bold">Bold</option>
+        <option value="italic">Italic</option>
+        <option value="bold italic">Bold Italic</option>
+    </select><br>
+
+    <button onclick="applyStyle()">Apply</button>
+    <button onclick="closeStyleModal()">Cancel</button>
+</div>
+
         <div id="sectionsContainer"></div>
     </div>
 
-    <!-- Style Modal -->
-    <div id="styleModal" class="modal">
-
-        
-
-        <div class="modal-content">
-
-            <h3>Customize Section</h3>
-            <label for="fontSelect">Font:</label>
-            <select id="fontSelect"></select>
-
-            <label for="fontSize">Font Size (px):</label>
-            <input type="number" id="fontSize" value="16" min="8" max="100">
-
-            <label for="textColor">Text Color:</label>
-            <input type="color" id="textColor">
-
-            <label for="bgColor">Background Color:</label>
-            <input type="color" id="bgColor">
-
-            <button onclick="applyStyle()">✅ Apply</button>
-            <button onclick="closeStyleModal()">❌ Cancel</button>
-
-        </div>
-    </div>
 
     <script src="fonts.js"></script>
-    <script src="script.js"></script>
+    <script src="script2.js"></script>
 </body>
 </html>
