Fixing shit to look nice

--- a/index2.html
+++ b/index2.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>stPatsSectional</title>
+    <title>stPatsSectional2</title>
     <link href="https://fonts.googleapis.com/css2?display=swap" rel="stylesheet">
     <!-- <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600;700&family=Bungee+Shade&family=Matemasie&family=Oregano:ital@0;1&family=Silkscreen:wght@400;700&display=swap" rel="stylesheet"> -->
     <link href="style2.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <h1>✍🏼 theSectional ✍🏼</h1>
+    <h1>✍🏼 theSectionalTwo ✍🏼</h1>
     <a href="index.html" id="linkBack">Go To Original!</a>
     <button onclick="toggleAllSections()" id="toggleAllBtn">👁 Show All Sections</button>
 
@@ -21,7 +21,7 @@
             <button onclick="toggleHeaderControls()" id="headerToggleBtn">➕ Show Controls</button>
 
 
-            <div id="controls">
+            <div id="controls" class="hidden">
                 <div class="newFileSection">
                     <h2>✍🏼 Add A New Section ✍🏼</h2>
                     <input type="text" id="newSection" placeholder="New Section Name">
