--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <h1>✍🏼 theSectionalOne ✍🏼</h1>
     <a href="index2.html" id="linkBack">Go To Slick!</a>
+    <a href="index3.html" id="linkBack">Go To New Original!</a>
     <button onclick="toggleAllSections()" id="toggleAllBtn">👁 Show All Sections</button>
 
     <div id="mainContainer">
