Making more modal shit

--- a/index3.html
+++ b/index3.html
@@ -6,8 +6,8 @@
 <link href="style3.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <a href="index.html" id="linkBack">Go To Original Asshole!</a>
-    <a href="index2.html" id="linkBack">Go To New Original!</a>
+    <a href="index.html" id="linkBack">Go To Original!</a>
+    <a href="index2.html" id="linkBack">Go To Slick!</a>
 <h1>Checklist Test</h1>
 
 <input type="text" id="newSection" placeholder="New Section">
