--- a/index2.html
+++ b/index2.html
@@ -11,7 +11,7 @@
 <body>
     <h1>✍🏼 theSectionalTwo ✍🏼</h1>
     <a href="index.html" id="linkBack">Go To Original!</a>
-    <a href="index3.html" id="linkBack">Go To New Original!</a>
+    <!-- <a href="index3.html" id="linkBack">Go To New Original!</a> -->
     <button onclick="toggleAllSections()" id="toggleAllBtn">👁 Show All Sections</button>
 
     <div id="mainContainer">
